# StorageManager

./: CHANGELOG.md  LICENSE  README.md  entity.py  main.py  pyproject.toml  requirements.txt
.github/workflows/: ios.yml
src/StorageManager/: __main__.py  entity.py  main.py
